<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_register"
    tools:context=".EnrollActivity">


    <TextView
        android:id="@+id/reg_show"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_nikename_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/round_edittext"
        android:text="@string/enrolling"
        android:inputType="textPersonName"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />
    <EditText
        android:id="@+id/reg_nikename_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reg_account_input"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/nikename"
        android:textSize="20sp" />


    <EditText

        android:id="@+id/reg_account_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/tip_account"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/reg_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_account_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/tip_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorGreen"
        android:text="@string/enroll"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</RelativeLayout>
