<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorLogin">

    <TextView
        android:id="@+id/news_show"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@+id/account_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="9dp"
        android:text="@string/logining"
        android:background="@drawable/round_edittext"
        android:inputType="textPersonName"
        android:textSize="20sp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/account_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/tip_account"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/password_input"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip_password"
        android:inputType="textPassword"
        android:layout_below="@id/account_input"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGreen"/>
</RelativeLayout>
